src/objects/dwp_cvad__Action_Audit__c.object
<CustomObject>
    <description>Stores the basic action audit information</description>
    <fields>
        <fullName>action_audit_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email SIO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>action_opp_sio_code__c</fullName>
        <label>SIO Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Timestamp of the action audited.</description>
        <inlineHelpText>Timestamp of the action audited.</inlineHelpText>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_name__c</fullName>
        <description>Brief description of the action audited.</description>
        <inlineHelpText>Brief description of the action audited.</inlineHelpText>
        <label>Action Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_object_api_name__c</fullName>
        <description>Object API Name of the record to which the action audited refers to.</description>
        <inlineHelpText>Object API Name of the record to which the action audited refers to.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_record_id__c</fullName>
        <description>Id of the record to which the action audited refers to.</description>
        <inlineHelpText>Id of the record to which the action audited refers to.</inlineHelpText>
        <label>Record Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_style__c</fullName>
        <description>Audited action visualization style.</description>
        <inlineHelpText>Audited action visualization style.</inlineHelpText>
        <label>Style</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>approve</fullName>
                </value>
                <value>
                    <fullName>approveTop</fullName>
                </value>
                <value>
                    <fullName>deny</fullName>
                </value>
                <value>
                    <fullName>elevate</fullName>
                </value>
                <value>
                    <fullName>elevateTop</fullName>
                </value>
                <value>
                    <fullName>infoAlt</fullName>
                </value>
                <value>
                    <fullName>quickText</fullName>
                </value>
                <value>
                    <fullName>restudy</fullName>
                </value>
                <value>
                    <fullName>sendBack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_type__c</fullName>
        <description>Type of the action audited.</description>
        <inlineHelpText>Type of the action audited.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation with the user that performed the action audited.</description>
        <inlineHelpText>Relation with the user that performed the action audited.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__action_audit_user_name__c</fullName>
        <description>Full name of the user that performed the action audited.</description>
        <formula>dwp_cvad__action_audit_user_id__r.FirstName + &apos; &apos; + dwp_cvad__action_audit_user_id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full name of the user that performed the action audited.</inlineHelpText>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_cvad__audit_audit_comments__c</fullName>
        <description>Comments to describe the action audited.</description>
        <inlineHelpText>Comments to describe the action audited.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Action Audit</label>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>